--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "dashboard",
+  "homepage": "https://masete.github.io/digest-africa-/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
